syntax = "proto3";

package com.finstream.common.grpc;

option java_multiple_files = true;
option java_package = "com.finstream.common.grpc";

service WalletService {
  rpc GetBalance (BalanceRequest) returns (BalanceResponse);
  rpc ValidateUser (UserValidationRequest) returns (UserValidationResponse);
}

message BalanceRequest {
  string userId = 1;
}

message BalanceResponse {
  string userId = 1;
  double balance = 2;
  string currency = 3;
}

message UserValidationRequest {
  string userId = 1;
}

message UserValidationResponse {
  bool isValid = 1;
  string fullName = 2;
}